--- a/app.json
+++ b/app.json
@@ -79,7 +79,7 @@
         },
         "SUPPORT_CHAT": {
             "description": "Username of a Support Group / ADMIN. ( Should be username without @ and not ID)",
-            "value": "m_house786",
+            "value": "UPDATE_ALL_MOVIE",
             "required": false
         }
     },
@@ -90,7 +90,7 @@
     "formation": {
         "worker": {
             "quantity": 1,
-            "size": "free"
+            "size": "ECO"
         }
     }
 }
